--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
           <img class="ico" src="img/ico-ui.svg" alt="" />
           <h4>UI/UX</h4>
           <ul class="list-unstyled">
+            <li>UX design</li>
             <li>Wireframing</li>
             <li>Flow charts</li>
             <li>UI Design</li>
@@ -169,11 +170,12 @@
         </div>
         <div class="col-md-4">
           <img class="ico" src="img/ico-brand.svg" alt="" />
-          <h4>Branding</h4>
+          <h4>Brand/Visual Design</h4>
           <ul class="list-unstyled">
             <li>Brand Concept</li>
             <li>Logo Design</li>
-            <li>Identity Strategy</li>
+            <li>Graphic Design</li>
+            <li>Video/Motion Promotions</li>
           </ul>
         </div>
       </div>
