--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
                   crafted applications. We devote endless hours of
                   brainstorming, lost of caffeine and other substances :) to
                   design great user experiences and aesthetically pleasing
-                  designs. Mucho cocaina directly imported from Lima Peru makes
-                  anything possible.
+                  designs. 
                 </p>
               </div>
             </div>
