upward.net link

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               Francisco Bay Area. They pride themselves in being easy to do
               business and adverstise to partners. woweweb was hired to design
               it's UI and implement it's front end. Go take a pay them a visit
-              Upward.net
+              <a href="https://www.upward.net/">Upward.net</a>
             </p>
           </div>
           <div class="col-md-8">
