--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Woweweb</title>
 
     <!-- Bootstrap -->
     <link
@@ -100,7 +100,7 @@
                   crafted applications. We devote endless hours of
                   brainstorming, lost of caffeine and other substances :) to
                   design great user experiences and aesthetically pleasing
-                  designs. 
+                  designs.
                 </p>
               </div>
             </div>
@@ -216,18 +216,12 @@
         </div>
         <div class="row text-center">
           <div class="col-md-4 col-md-offset-2 profiles">
-            <img
-              src="img/ale.jpg"
-              alt=""
-            />
+            <img src="img/ale.jpg" alt="" />
             <h3>Javier Cruz</h3>
             <p>Front-End</p>
           </div>
           <div class="col-md-4 profiles">
-            <img
-              src="img/bob.jpg"
-              alt=""
-            />
+            <img src="img/bob.jpg" alt="" />
             <h3>Bob Krstic</h3>
             <p>Back-End</p>
           </div>
