--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                 <h2>We Listen</h2>
                 <p>
                   Let's meet for a cup of coffee or lunch and chat about your
-                  ideas and future plans for your new website. Together with you
-                  we will make it happen.
+                  ideas and future plans for your new website. Together we can
+                  create miracles.
                 </p>
               </div>
             </div>
@@ -98,9 +98,8 @@
                 <p>
                   Our goal is to blend functionality and design to create well
                   crafted applications. We devote endless hours of
-                  brainstorming, lost of caffeine and other substances :) to
-                  design great user experiences and aesthetically pleasing
-                  designs.
+                  brainstorming, lots of caffeine :) to design great user
+                  experiences and aesthetically pleasing designs.
                 </p>
               </div>
             </div>
