--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
               <li><a href="#Services">Services </a></li>
               <li><a href="#portfolio">Portfolio</a></li>
               <li><a href="#contact">Contact</a></li>
+              <li><a href="plans.html">Packages</a></li>
             </ul>
           </div>
         </div>
