--- a/plans.html
+++ b/plans.html
@@ -37,7 +37,7 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav  navbar-right">
-            <li><a href="plans.html">Packages</a></li>
+            <li><a href="index.html">Home</a></li>
           </ul>
         </div>
       </div>
