adding checkmarks and footer

--- a/plans.html
+++ b/plans.html
@@ -47,7 +47,7 @@
     <div class=container>
       <div class="row">
         <div class="master-title">
-          <h1>Pricing</h1>
+          <h1>Plans & Pricing</h1>
           <p>Choose the plan that best fits your needs.</p>
         </div>
 
@@ -59,46 +59,101 @@
         <div class="col-md-3">
           <div class="card">
 
-            <h4>Basic Plan</h4>
+            <h4>Basic</h4>
             <p>Our basic service still comes with the fast delivery and designed to impress your clients.</p>
             <hr>
             <h3>$1000</h3>
+            <div class="row">
+
+              <div class="col-sm-12">
+                <ul>
+                  <li><span>&#10003;</span>Front End UI Design</li>
+                  <li>Back End Database</li>
+                  <li>Login functionality</li>
+                  <li>Payment system</li>
+                </ul>
+              </div>
+
+
+            </div>
 
           </div>
         </div>
         <div class="col-md-3">
           <div class="card">
 
-            <h4>Premium</h4>
+            <h4 id="premium-title">Premium</h4>
             <p>A website with a great value for the price. Enhanced functionality with a remarkable user interface. </p>
             <hr>
             <h3>$3000</h3>
+            <div class="row">
+
+              <div class="col-sm-12">
+                <ul>
+                  <li><span>&#10003;</span>Front End UI Design</li>
+                  <li><span>&#10003;</span>Back End Database</li>
+                  <li>Login functionality</li>
+                  <li>Payment system</li>
+                </ul>
+              </div>
+
+
+            </div>
           </div>
 
         </div>
         <div class="col-md-3">
           <div class="card">
 
-            <h4>Business</h4>
+            <h4 id="business-title">Business</h4>
             <p>Everything that business would need and many more other features to help your business grow.</p>
             <hr>
             <h3>$5000</h3>
+            <div class="row">
+
+              <div class="col-sm-12">
+                <ul>
+                  <li><span>&#10003;</span>Front End UI Design</li>
+                  <li><span>&#10003;</span>Back End Database</li>
+                  <li><span>&#10003;</span>Login functionality</li>
+                  <li>Payment system</li>
+                </ul>
+              </div>
+
+
+            </div>
 
           </div>
         </div>
         <div class="col-md-3">
           <div class="card">
 
-            <h4>Enterprise</h4>
+            <h4 id="enterprise-title">Enterprise</h4>
             <p>The best possible experience targeting your clients' satisfaction and delivering all that is needed to
-              connect your business with wider nieche.</p>
-              <hr>
+              connect your business with wider niche.</p>
+            <hr>
             <h3>$10000</h3>
+            <div class="row">
+
+              <div class="col-sm-12">
+                <ul>
+                  <li><span>&#10003;</span>Front End UI Design</li>
+                  <li><span>&#10003;</span>Back End Database</li>
+                  <li><span>&#10003;</span>Login functionality</li>
+                  <li><span>&#10003;</span>Payment system</li>
+                  <li><span>&#10003;</span>Three months professional support</li>
+                </ul>
+              </div>
+
+
+            </div>
 
           </div>
         </div>
       </div>
   </section>
+  <footer>Prices are subject to change based on complexity on the design!</footer>
+
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://code.jquery.com/jquery-1.12.4.min.js"
