--- a/plans.html
+++ b/plans.html
@@ -50,21 +50,17 @@
           <h1>Plans & Pricing</h1>
           <p>Choose the plan that best fits your needs.</p>
         </div>
-
       </div>
     </div>
-
     <div class="container">
       <div class="row">
         <div class="col-md-3">
           <div class="card">
-
             <h4>Basic</h4>
             <p>Our basic service still comes with the fast delivery and designed to impress your clients.</p>
             <hr>
             <h3>$1000</h3>
             <div class="row">
-
               <div class="col-sm-12">
                 <ul>
                   <li><span>&#10003;</span>Front End UI Design</li>
@@ -73,21 +69,16 @@
                   <li>Payment system</li>
                 </ul>
               </div>
-
-
             </div>
-
           </div>
         </div>
         <div class="col-md-3">
           <div class="card">
-
             <h4 id="premium-title">Premium</h4>
             <p>A website with a great value for the price. Enhanced functionality with a remarkable user interface. </p>
             <hr>
             <h3>$3000</h3>
             <div class="row">
-
               <div class="col-sm-12">
                 <ul>
                   <li><span>&#10003;</span>Front End UI Design</li>
@@ -96,21 +87,16 @@
                   <li>Payment system</li>
                 </ul>
               </div>
-
-
             </div>
           </div>
-
         </div>
         <div class="col-md-3">
           <div class="card">
-
             <h4 id="business-title">Business</h4>
             <p>Everything that business would need and many more other features to help your business grow.</p>
             <hr>
             <h3>$5000</h3>
             <div class="row">
-
               <div class="col-sm-12">
                 <ul>
                   <li><span>&#10003;</span>Front End UI Design</li>
@@ -119,22 +105,17 @@
                   <li>Payment system</li>
                 </ul>
               </div>
-
-
             </div>
-
           </div>
         </div>
         <div class="col-md-3">
           <div class="card">
-
             <h4 id="enterprise-title">Enterprise</h4>
             <p>The best possible experience targeting your clients' satisfaction and delivering all that is needed to
               connect your business with wider niche.</p>
             <hr>
             <h3>$10000</h3>
             <div class="row">
-
               <div class="col-sm-12">
                 <ul>
                   <li><span>&#10003;</span>Front End UI Design</li>
@@ -144,17 +125,12 @@
                   <li><span>&#10003;</span>Three months professional support</li>
                 </ul>
               </div>
-
-
             </div>
-
           </div>
         </div>
       </div>
   </section>
-  <footer>Prices are subject to change based on complexity on the design!</footer>
-
-
+  <footer>Prices are subject to change based on complexity of the design!</footer>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://code.jquery.com/jquery-1.12.4.min.js"
     integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ"
