--- a/index.html
+++ b/index.html
@@ -1,128 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Woweweb</title>
 
-    <!-- Bootstrap -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
-      integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="css/styles.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>Woweweb</title>
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous" />
+  <link rel="stylesheet" href="css/styles.css" />
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet" />
+
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
+</head>
 
-  <body>
-    <section id="hero">
-      <nav class="navbar transparent">
-        <div class="container">
-          <div class="navbar-header">
-            <button
-              type="button"
-              class="navbar-toggle collapsed"
-              data-toggle="collapse"
-              data-target="#bs-example-navbar-collapse-1"
-              aria-expanded="false"
-            >
-              <img src="img/hamburger.svg" alt="" />
-            </button>
-            <a class="navbar-brand" href="#">
-              <img src="img/logo.svg" alt="" />
-            </a>
-          </div>
-          <div
-            class="collapse navbar-collapse"
-            id="bs-example-navbar-collapse-1"
-          >
-            <ul class="nav navbar-nav  navbar-right">
-              <li><a href="#Services">Services </a></li>
-              <li><a href="#portfolio">Portfolio</a></li>
-              <li><a href="#contact">Contact</a></li>
-              <li><a href="plans.html">Packages</a></li>
-            </ul>
+<body>
+  <section id="hero">
+    <nav class="navbar transparent">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+            data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <img src="img/hamburger.svg" alt="" />
+          </button>
+          <a class="navbar-brand" href="#">
+            <img src="img/logo.svg" alt="" />
+          </a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav  navbar-right">
+            <li><a href="#Services">Services </a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <!-- <li><a href="plans.html">Packages</a></li> -->
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+      </ol>
+
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <div class="container">
+            <div class="col-md-6 ill-hero1"></div>
+            <div class="col-md-6">
+              <h2>We Listen</h2>
+              <p>
+                Let's meet for a cup of coffee or lunch and chat about your
+                ideas and future plans for your new website. Together we can
+                create miracles.
+              </p>
+            </div>
           </div>
         </div>
-      </nav>
-
-      <div
-        id="carousel-example-generic"
-        class="carousel slide"
-        data-ride="carousel"
-      >
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-          <li
-            data-target="#carousel-example-generic"
-            data-slide-to="0"
-            class="active"
-          ></li>
-          <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-          <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-        </ol>
-
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner" role="listbox">
-          <div class="item active">
-            <div class="container">
-              <div class="col-md-6 ill-hero1"></div>
-              <div class="col-md-6">
-                <h2>We Listen</h2>
-                <p>
-                  Let's meet for a cup of coffee or lunch and chat about your
-                  ideas and future plans for your new website. Together we can
-                  create miracles.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <div class="container">
-              <div class="col-md-6 ill-hero2"></div>
-              <div class="col-md-6">
-                <h2>We Design</h2>
-                <p>
-                  Our goal is to blend functionality and design to create well
-                  crafted applications. We devote endless hours of
-                  brainstorming, lots of caffeine :) to design great user
-                  experiences and aesthetically pleasing designs.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="item">
-            <div class="container">
-              <div class="col-md-6 ill-hero3"></div>
-              <div class="col-md-6">
-                <h2>We Develop</h2>
-                <p>
-                  The final stage of the process is to put your idea(s) and
-                  designs into reality. This is where we dabble with zeros and
-                  ones to display your website/app for everyone to see.
-                </p>
-              </div>
+        <div class="item">
+          <div class="container">
+            <div class="col-md-6 ill-hero2"></div>
+            <div class="col-md-6">
+              <h2>We Design</h2>
+              <p>
+                Our goal is to blend functionality and design to create well
+                crafted applications. We devote endless hours of
+                brainstorming, lots of caffeine :) to design great user
+                experiences and aesthetically pleasing designs.
+              </p>
             </div>
           </div>
         </div>
 
-        <!-- Controls -->
-        <!-- <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+        <div class="item">
+          <div class="container">
+            <div class="col-md-6 ill-hero3"></div>
+            <div class="col-md-6">
+              <h2>We Develop</h2>
+              <p>
+                The final stage of the process is to put your idea(s) and
+                designs into reality. This is where we dabble with zeros and
+                ones to display your website/app for everyone to see.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Controls -->
+      <!-- <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
@@ -130,9 +108,9 @@
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a> -->
-      </div>
+    </div>
 
-      <!-- <div class="container">
+    <!-- <div class="container">
           <div class="col-md-6 ill-hero1">
             
           </div>
@@ -142,104 +120,97 @@
           </div>
 
         </div> -->
-    </section>
+  </section>
 
-    <section id="services">
-      <div class="container text-center">
-        <h2>Services</h2>
-        <div class="col-md-4">
-          <img class="ico" src="img/ico-ui.svg" alt="" />
-          <h4>UI/UX</h4>
-          <ul class="list-unstyled">
-            <li>UX design</li>
-            <li>Wireframing</li>
-            <li>Flow charts</li>
-            <li>UI Design</li>
-          </ul>
-        </div>
-        <div class="col-md-4">
-          <img class="ico" src="img/ico-front.svg" alt="" />
-          <h4>Front-End</h4>
-          <ul class="list-unstyled">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>React</li>
-          </ul>
-        </div>
-        <div class="col-md-4">
-          <img class="ico" src="img/ico-brand.svg" alt="" />
-          <h4>Brand/Visual Design</h4>
-          <ul class="list-unstyled">
-            <li>Brand Concept</li>
-            <li>Logo Design</li>
-            <li>Graphic Design</li>
-            <li>Video/Motion Promotions</li>
-          </ul>
-        </div>
+  <section id="services">
+    <div class="container text-center">
+      <h2>Services</h2>
+      <div class="col-md-4">
+        <img class="ico" src="img/ico-ui.svg" alt="" />
+        <h4>UI/UX</h4>
+        <ul class="list-unstyled">
+          <li>UX design</li>
+          <li>Wireframing</li>
+          <li>Flow charts</li>
+          <li>UI Design</li>
+        </ul>
       </div>
-    </section>
-
-    <section id="portfolio">
-      <div class="container">
-        <h2 class="text-center">Portfolio</h2>
-        <div class="row padding-top">
-          <div class="col-md-4">
-            <h3>Upward.net</h3>
-            <p>
-              Upward.net helps employers and employees connect. Based in the San
-              Francisco Bay Area. They pride themselves in being easy to do
-              business and adverstise to partners. woweweb was hired to design
-              it's UI and implement it's front end. Go take a pay them a visit
-              <a href="https://www.upward.net/">Upward.net</a>
-            </p>
-          </div>
-          <div class="col-md-8">
-            <img
-              class="img-fluid"
-              src="img/port-upward.jpg"
-              alt="portfolio img"
-            />
-          </div>
-        </div>
+      <div class="col-md-4">
+        <img class="ico" src="img/ico-front.svg" alt="" />
+        <h4>Front-End</h4>
+        <ul class="list-unstyled">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>React</li>
+        </ul>
       </div>
-    </section>
+      <div class="col-md-4">
+        <img class="ico" src="img/ico-brand.svg" alt="" />
+        <h4>Brand/Visual Design</h4>
+        <ul class="list-unstyled">
+          <li>Brand Concept</li>
+          <li>Logo Design</li>
+          <li>Graphic Design</li>
+          <li>Video/Motion Promotions</li>
+        </ul>
+      </div>
+    </div>
+  </section>
 
-    <section id="contact">
-      <div class="container">
-        <h2 class="text-center">Contact</h2>
-        <div class="row ico">
-          <p class="text-center">
-            For general inquiries, contact us at
-            <a href="mailto:info@woweweb.com">info@woweweb.com</a>
+  <section id="portfolio">
+    <div class="container">
+      <h2 class="text-center">Portfolio</h2>
+      <div class="row padding-top">
+        <div class="col-md-4">
+          <h3>Upward.net</h3>
+          <p>
+            Upward.net helps employers and employees connect. Based in the San
+            Francisco Bay Area. They pride themselves in being easy to do
+            business and adverstise to partners. woweweb was hired to design
+            it's UI and implement it's front end. Go take a pay them a visit
+            <a href="https://www.upward.net/">Upward.net</a>
           </p>
         </div>
-        <div class="row text-center">
-          <div class="col-md-4 col-md-offset-2 profiles">
-            <img src="img/ale.jpg" alt="" />
-            <h3>Javier Cruz</h3>
-            <p>Front-End</p>
-          </div>
-          <div class="col-md-4 profiles">
-            <img src="img/bob.jpg" alt="" />
-            <h3>Bob Krstic</h3>
-            <p>Back-End</p>
-          </div>
+        <div class="col-md-8">
+          <img class="img-fluid" src="img/port-upward.jpg" alt="portfolio img" />
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script
-      src="https://code.jquery.com/jquery-1.12.4.min.js"
-      integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ"
-      crossorigin="anonymous"
-    ></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
-      integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <section id="contact">
+    <div class="container">
+      <h2 class="text-center">Contact</h2>
+      <div class="row ico">
+        <p class="text-center">
+          For general inquiries, contact us at
+          <a href="mailto:info@woweweb.com">info@woweweb.com</a>
+        </p>
+      </div>
+      <div class="row text-center">
+        <div class="col-md-4 col-md-offset-2 profiles">
+          <img src="img/ale.jpg" alt="" />
+          <h3>Javier Cruz</h3>
+          <p>Front-End</p>
+        </div>
+        <div class="col-md-4 profiles">
+          <img src="img/bob.jpg" alt="" />
+          <h3>Bob Krstic</h3>
+          <p>Back-End</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://code.jquery.com/jquery-1.12.4.min.js"
+    integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ"
+    crossorigin="anonymous"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
+    integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
