--- a/plans.html
+++ b/plans.html
@@ -56,53 +56,116 @@
       <div class="row">
         <div class="col-md-3">
           <div class="card">
-            <h4>Basic</h4>
-            <p>Our basic service still comes with the fast delivery and designed to impress your clients.</p>
+            <div class="card-header">
+              <h4 id="basic-title">Basic</h4>
+              <p>Our basic service still comes with the fast delivery and designed to impress your clients.</p>
+            </div>
             <hr>
             <h3>$1000</h3>
             <div class="row">
               <div class="col-sm-12">
                 <ul>
-                  <li><span>&#10003;</span>Front End UI Design</li>
-                  <li>Back End Database</li>
-                  <li>Login functionality</li>
-                  <li>Payment system</li>
+                  <li class="row">
+                    <span class="span-checkmark">&#10003;</span>
+                    <span class="span-planBullet">Front End/UI Design</span>
+                  </li>
+                  <li class="row">
+                    <span class="span-checkmark no-checkmark">&#10003;</span>
+                    <span class="span-planBullet">Back End/Database</span>
+                  </li>
+                  <li class="row">
+                    <span class="span-checkmark no-checkmark">&#10003;</span>
+                    <span class="span-planBullet no-checkmark">Login functionality</span>
+                  </li>
+                  <li class="row">
+                    <span class="span-checkmark no-checkmark">&#10003;</span>
+                    <span class="span-planBullet">Payment system</span>
+                  </li>
                 </ul>
+              </div>
+              <div class="row">
+                <div class="col-md-12">
+                  <p>
+                    <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#collapseExample"
+                      aria-expanded="false" aria-controls="collapseExample">
+                      Learn more
+                    </button>
+                  </p>
+                  <div class="collapse" id="collapseExample">
+                    <div class="card card-body" style="height: 150px">
+                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
+                      Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                    </div>
+                  </div>
+                </div>
+
               </div>
             </div>
           </div>
         </div>
         <div class="col-md-3">
           <div class="card">
-            <h4 id="premium-title">Premium</h4>
-            <p>A website with a great value for the price. Enhanced functionality with a remarkable user interface. </p>
+            <div class="card-header">
+              <h4 id="premium-title">Premium</h4>
+              <p>A website with a great value for the price. Enhanced functionality with a remarkable user interface.
+              </p>
+            </div>
+
             <hr>
             <h3>$3000</h3>
             <div class="row">
               <div class="col-sm-12">
                 <ul>
-                  <li><span>&#10003;</span>Front End UI Design</li>
-                  <li><span>&#10003;</span>Back End Database</li>
-                  <li>Login functionality</li>
-                  <li>Payment system</li>
+                  <li class="row">
+                    <span class="span-checkmark">&#10003;</span>
+                    <span class="span-planBullet">Front End/UI Design</span>
+                  </li>
+                  <li class="row">
+                    <span class="span-checkmark">&#10003;</span>
+                    <span class="span-planBullet">Back End/Database</span>
+                  </li>
+                  <li class="row">
+                    <span class="span-checkmark no-checkmark">&#10003;</span>
+                    <span class="span-planBullet">Login functionality</span>
+                  </li>
+                  <li class="row">
+                    <span class="span-checkmark no-checkmark">&#10003;</span>
+                    <span class="span-planBullet">Payment system</span>
+                  </li>
                 </ul>
               </div>
+
             </div>
           </div>
         </div>
         <div class="col-md-3">
           <div class="card">
-            <h4 id="business-title">Business</h4>
-            <p>Everything that business would need and many more other features to help your business grow.</p>
+            <div class="card-header">
+              <h4 id="business-title">Business</h4>
+              <p>Everything that business would need and many more other features to help your business grow.</p>
+            </div>
+
             <hr>
             <h3>$5000</h3>
             <div class="row">
               <div class="col-sm-12">
                 <ul>
-                  <li><span>&#10003;</span>Front End UI Design</li>
-                  <li><span>&#10003;</span>Back End Database</li>
-                  <li><span>&#10003;</span>Login functionality</li>
-                  <li>Payment system</li>
+                  <li class="row">
+                    <span class="span-checkmark">&#10003;</span>
+                    <span class="span-planBullet">Front End/UI Design</span>
+                  </li>
+                  <li class="row">
+                    <span class="span-checkmark">&#10003;</span>
+                    <span class="span-planBullet">Back End/Database</span>
+                  </li>
+                  <li class="row">
+                    <span class="span-checkmark">&#10003;</span>
+                    <span class="span-planBullet">Login functionality</span>
+                  </li>
+                  <li class="row">
+                    <span class="span-checkmark no-checkmark">&#10003;</span>
+                    <span class="span-planBullet">Payment system</span>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -110,19 +173,33 @@
         </div>
         <div class="col-md-3">
           <div class="card">
-            <h4 id="enterprise-title">Enterprise</h4>
-            <p>The best possible experience targeting your clients' satisfaction and delivering all that is needed to
-              connect your business with wider niche.</p>
+            <div class="card-header">
+              <h4 id="enterprise-title">Enterprise</h4>
+              <p>The best possible experience targeting your clients' satisfaction and delivering all that is needed to
+                connect your business with wider niche.</p>
+            </div>
+
             <hr>
             <h3>$10000</h3>
             <div class="row">
               <div class="col-sm-12">
                 <ul>
-                  <li><span>&#10003;</span>Front End UI Design</li>
-                  <li><span>&#10003;</span>Back End Database</li>
-                  <li><span>&#10003;</span>Login functionality</li>
-                  <li><span>&#10003;</span>Payment system</li>
-                  <li><span>&#10003;</span>Three months professional support</li>
+                  <li class="row">
+                    <span class="span-checkmark">&#10003;</span>
+                    <span class="span-planBullet">Front End/UI Design</span>
+                  </li>
+                  <li class="row">
+                    <span class="span-checkmark">&#10003;</span>
+                    <span class="span-planBullet">Back End/Database</span>
+                  </li>
+                  <li class="row">
+                    <span class="span-checkmark">&#10003;</span>
+                    <span class="span-planBullet">Login functionality</span>
+                  </li>
+                  <li class="row">
+                    <span class="span-checkmark">&#10003;</span>
+                    <span class="span-planBullet">Payment system</span>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -130,7 +207,9 @@
         </div>
       </div>
   </section>
-  <footer>Prices are subject to change based on complexity of the design!</footer>
+  <footer>
+    <p>Prices are subject to change based on complexity of the design!</p>
+  </footer>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://code.jquery.com/jquery-1.12.4.min.js"
     integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ"
