--- a/plans.html
+++ b/plans.html
@@ -64,7 +64,7 @@
             <h3>$1000</h3>
             <div class="row">
               <div class="col-sm-12">
-                <ul>
+                <ul class="plans-list">
                   <li class="row">
                     <span class="span-checkmark">&#10003;</span>
                     <span class="span-planBullet">Front End/UI Design</span>
@@ -115,7 +115,7 @@
             <h3>$3000</h3>
             <div class="row">
               <div class="col-sm-12">
-                <ul>
+                <ul class="plans-list">
                   <li class="row">
                     <span class="span-checkmark">&#10003;</span>
                     <span class="span-planBullet">Front End/UI Design</span>
@@ -149,7 +149,7 @@
             <h3>$5000</h3>
             <div class="row">
               <div class="col-sm-12">
-                <ul>
+                <ul class="plans-list">
                   <li class="row">
                     <span class="span-checkmark">&#10003;</span>
                     <span class="span-planBullet">Front End/UI Design</span>
@@ -183,7 +183,7 @@
             <h3>$10000</h3>
             <div class="row">
               <div class="col-sm-12">
-                <ul>
+                <ul class="plans-list">
                   <li class="row">
                     <span class="span-checkmark">&#10003;</span>
                     <span class="span-planBullet">Front End/UI Design</span>
