adding test button idea

--- a/plans.html
+++ b/plans.html
@@ -61,7 +61,7 @@
               <p>Our basic service still comes with the fast delivery and designed to impress your clients.</p>
             </div>
             <hr>
-            <h3>$1000</h3>
+            <h3 class="price-font">$1000</h3>
             <div class="row">
               <div class="col-sm-12">
                 <ul class="plans-list">
@@ -112,7 +112,7 @@
             </div>
 
             <hr>
-            <h3>$3000</h3>
+            <h3 class="price-font">$3000</h3>
             <div class="row">
               <div class="col-sm-12">
                 <ul class="plans-list">
@@ -146,7 +146,7 @@
             </div>
 
             <hr>
-            <h3>$5000</h3>
+            <h3 class="price-font">$5000</h3>
             <div class="row">
               <div class="col-sm-12">
                 <ul class="plans-list">
@@ -180,7 +180,7 @@
             </div>
 
             <hr>
-            <h3>$10000</h3>
+            <h3 class="price-font">$10000</h3>
             <div class="row">
               <div class="col-sm-12">
                 <ul class="plans-list">
@@ -203,6 +203,10 @@
                 </ul>
               </div>
             </div>
+            <button class="btn-primary" onclick="myFunction()">Learn More</button>
+            <div id="enterprisePlanDesc" style="display: none;">
+              This is the text about this plan. Will be added to the final project. This is just a test.
+            </div>
           </div>
         </div>
       </div>
@@ -210,6 +214,8 @@
   <footer>
     <p>Prices are subject to change based on complexity of the design!</p>
   </footer>
+  <!-- include our local js file and the functions inside -->
+  <script src="functions.js"></script>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://code.jquery.com/jquery-1.12.4.min.js"
     integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ"
