--- a/plans.html
+++ b/plans.html
@@ -203,7 +203,7 @@
                 </ul>
               </div>
             </div>
-            <button class="btn-primary" onclick="myFunction()">Learn More</button>
+            <button class="btn btn-info" onclick="myFunction()">Learn More</button>
             <div id="enterprisePlanDesc" style="display: none;">
               This is the text about this plan. Will be added to the final project. This is just a test.
             </div>
