toggle text plan

--- a/plans.html
+++ b/plans.html
@@ -206,6 +206,9 @@
             <button class="btn btn-info" onclick="myFunction()">Learn More</button>
             <div id="enterprisePlanDesc" style="display: none;">
               This is the text about this plan. Will be added to the final project. This is just a test.
+              This is the text about this plan. Will be added to the final project. This is just a test.
+              This is the text about this plan. Will be added to the final project. This is just a test.
+              This is the text about this plan. Will be added to the final project. This is just a test.
             </div>
           </div>
         </div>
