--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav  navbar-right">
-            <li><a href="#Services">Services </a></li>
+            <li><a href="#services">Services </a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
             <!-- <li><a href="plans.html">Packages</a></li> -->
