--- a/plans.html
+++ b/plans.html
@@ -84,25 +84,28 @@
                     </li>
                   </ul>
                 </div>
-                <div class="row">
-                  <div class="col-md-12">
-                    <p>
-                      <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#collapseExample"
-                        aria-expanded="false" aria-controls="collapseExample">
-                        Learn more
-                      </button>
-                    </p>
-                    <div class="collapse" id="collapseExample">
-                      <div class="card card-body" style="height: 150px">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
-                        Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea
-                        proident.
-                      </div>
-                    </div>
-                  </div>
-
-                </div>
               </div>
+
+              <div class="row">
+                <!-- <div class="col-md-12"> -->
+                <p>
+                  <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#collapseExample"
+                    aria-expanded="false" aria-controls="collapseExample">
+                    Learn more
+                  </button>
+                </p>
+
+                <!-- </div> -->
+
+              </div>
+              <div class="collapse" id="collapseExample">
+                <!-- <div class="card card-body" style="height: 150px"> -->
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
+                Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea
+                proident.
+                <!-- </div> -->
+              </div>
+
             </div>
           </div>
           <div class="col-md-3">
