premium plan fixed

--- a/plans.html
+++ b/plans.html
@@ -55,6 +55,9 @@
       </div>
       <div class="container">
         <div class="row">
+
+          <!-- BASIC PLAN CARD -->
+
           <div class="col-md-3">
             <div class="card">
               <div class="card-header">
@@ -89,8 +92,8 @@
               <div class="row">
                 <!-- <div class="col-md-12"> -->
                 <p>
-                  <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#collapseExample"
-                    aria-expanded="false" aria-controls="collapseExample">
+                  <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#basicPlanCollapse"
+                    aria-expanded="false" aria-controls="basicPlanCollapse">
                     Learn more
                   </button>
                 </p>
@@ -98,7 +101,7 @@
                 <!-- </div> -->
 
               </div>
-              <div class="collapse" id="collapseExample">
+              <div class="collapse" id="basicPlanCollapse">
                 <!-- <div class="card card-body" style="height: 150px"> -->
                 Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
                 Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea
@@ -108,6 +111,10 @@
 
             </div>
           </div>
+
+
+          <!-- PREMIUM PLAN CARD -->
+
           <div class="col-md-3">
             <div class="card">
               <div class="card-header">
@@ -141,8 +148,33 @@
                 </div>
 
               </div>
+
+              <div class="row">
+                <!-- <div class="col-md-12"> -->
+                <p>
+                  <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#premiumPlanCollapse"
+                    aria-expanded="false" aria-controls="premiumPlanCollapse">
+                    Learn more
+                  </button>
+                </p>
+
+                <!-- </div> -->
+
+              </div>
+              <div class="collapse" id="premiumPlanCollapse">
+                <!-- <div class="card card-body" style="height: 150px"> -->
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
+                Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea
+                proident.
+                <!-- </div> -->
+              </div>
+
+
             </div>
           </div>
+
+          <!-- BUSINESS PLAN CARD -->
+
           <div class="col-md-3">
             <div class="card">
               <div class="card-header">
@@ -176,6 +208,9 @@
               </div>
             </div>
           </div>
+
+          <!-- ENTERPRISE PLAN CARD -->
+
           <div class="col-md-3">
             <div class="card">
               <div class="card-header">
