--- a/plans.html
+++ b/plans.html
@@ -206,6 +206,27 @@
                   </ul>
                 </div>
               </div>
+
+              <div class="row">
+                <!-- <div class="col-md-12"> -->
+                <p>
+                  <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#businessPlanCollapse"
+                    aria-expanded="false" aria-controls="businessPlanCollapse">
+                    Learn more
+                  </button>
+                </p>
+
+                <!-- </div> -->
+
+              </div>
+              <div class="collapse" id="businessPlanCollapse">
+                <!-- <div class="card card-body" style="height: 150px"> -->
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
+                Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea
+                proident.
+                <!-- </div> -->
+              </div>
+
             </div>
           </div>
 
@@ -244,13 +265,34 @@
                   </ul>
                 </div>
               </div>
-              <button class="btn btn-info" onclick="myFunction()">Learn More</button>
+
+              <div class="row">
+                <!-- <div class="col-md-12"> -->
+                <p>
+                  <button class="btn btn-info" type="button" data-toggle="collapse"
+                    data-target="#enterprisePlanCollapse" aria-expanded="false" aria-controls="enterprisePlanCollapse">
+                    Learn more
+                  </button>
+                </p>
+
+                <!-- </div> -->
+
+              </div>
+              <div class="collapse" id="enterprisePlanCollapse">
+                <!-- <div class="card card-body" style="height: 150px"> -->
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
+                Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea
+                proident.
+                <!-- </div> -->
+              </div>
+
+              <!-- <button class="btn btn-info" onclick="myFunction()">Learn More</button>
               <div id="enterprisePlanDesc" style="display: none;">
                 This is the text about this plan. Will be added to the final project. This is just a test.
                 This is the text about this plan. Will be added to the final project. This is just a test.
                 This is the text about this plan. Will be added to the final project. This is just a test.
                 This is the text about this plan. Will be added to the final project. This is just a test.
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
