--- a/plans.html
+++ b/plans.html
@@ -92,8 +92,8 @@
               <div class="row">
                 <!-- <div class="col-md-12"> -->
                 <p>
-                  <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#basicPlanCollapse"
-                    aria-expanded="false" aria-controls="basicPlanCollapse">
+                  <button class="btn btn-info" id="basicPlanButton" type="button" data-toggle="collapse"
+                    data-target="#basicPlanCollapse" aria-expanded="false" aria-controls="basicPlanCollapse">
                     Learn more
                   </button>
                 </p>
