button styling completed

--- a/plans.html
+++ b/plans.html
@@ -152,8 +152,8 @@
               <div class="row">
                 <!-- <div class="col-md-12"> -->
                 <p>
-                  <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#premiumPlanCollapse"
-                    aria-expanded="false" aria-controls="premiumPlanCollapse">
+                  <button class="btn btn-info" id="premiumPlanButton" type="button" data-toggle="collapse"
+                    data-target="#premiumPlanCollapse" aria-expanded="false" aria-controls="premiumPlanCollapse">
                     Learn more
                   </button>
                 </p>
@@ -210,8 +210,8 @@
               <div class="row">
                 <!-- <div class="col-md-12"> -->
                 <p>
-                  <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#businessPlanCollapse"
-                    aria-expanded="false" aria-controls="businessPlanCollapse">
+                  <button class="btn btn-info" id="businessPlanButton" type="button" data-toggle="collapse"
+                    data-target="#businessPlanCollapse" aria-expanded="false" aria-controls="businessPlanCollapse">
                     Learn more
                   </button>
                 </p>
@@ -269,7 +269,7 @@
               <div class="row">
                 <!-- <div class="col-md-12"> -->
                 <p>
-                  <button class="btn btn-info" type="button" data-toggle="collapse"
+                  <button class="btn btn-info" id="enterprisePlanButton" type="button" data-toggle="collapse"
                     data-target="#enterprisePlanCollapse" aria-expanded="false" aria-controls="enterprisePlanCollapse">
                     Learn more
                   </button>
