--- a/plans.html
+++ b/plans.html
@@ -298,9 +298,8 @@
         </div>
       </div>
     </section>
-    <footer>
-      <p>Prices are subject to change based on complexity of the design!</p>
-    </footer>
+    <footer>&copy; Copyright 2019 woweweb</footer>
+
   </div>
 
   <!-- include our local js file and the functions inside -->
