--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <div class="container">
       <h2 class="text-center">Portfolio</h2>
       <div class="row padding-top">
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
           <h3>Upward.net</h3>
           <p>
             Upward.net helps employers and employees connect. Based in the San
@@ -174,8 +174,96 @@
         </div>
         <div class="col-md-8">
           <img class="img-fluid" src="img/port-upward.jpg" alt="portfolio img" />
-        </div>
+        </div> -->
+        <div class=" col-md-12">
+          <ul class="nav nav-tabs">
+            <li class="active"><a data-toggle="tab" href="#web">Web</a></li>
+            <li><a data-toggle="tab" href="#graphic">Graphic</a></li>
+            <li><a data-toggle="tab" href="#motion">Motion</a></li>
+          </ul>
+        
+        <div class="tab-content">
+          <div id="web" class="tab-pane fade in active">
+            <div class="row">
+              <div class="col-md-4">
+                <h3>Upward</h3>
+                <p>
+                  Upward.net helps employers and employees connect. Based in the San
+                  Francisco Bay Area. They pride themselves in being easy to do
+                  business and adverstise to partners. woweweb was hired to design
+                  it's UI and implement it's front end. Go take a pay them a visit
+                  <a href="https://www.upward.net/">Upward.net</a>
+                </p>
+              </div>
+              <div class="col-md-8">
+                <img class="img-fluid" src="img/port-upward.jpg" alt="portfolio img" />
+              </div>
+          </div><!--/row-->
+          </div><!--/tab pane-->
+          <div id="graphic" class="tab-pane fade">
+            <div class="row">
+              <div class="col-md-4">
+                <h3>Beubique</h3>
+                <p>
+                  Logo type for tech blog Beubique.  After several iteractions they loved the hand crafted typography that resembles their casual uniqueness.
+                </p>
+              </div>
+              <div class="col-md-8">
+                <img class="img-fluid" src="img/port-l-beubique.jpg" alt="beubique" />
+              </div>
+          </div><!--/row-->
+          <div class="row">
+            <div class="col-md-4">
+              <h3>Buffalo Valley Soaps</h3>
+              <p>
+                Buffalo Valley Soaps contacted us to create a more colorful identity for their product.
+              </p>
+            </div>
+            <div class="col-md-8">
+              <img class="img-fluid" src="img/port-l-buffalo.jpg" alt="beubique" />
+            </div>
+        </div><!--/row-->
+            <div class="row">
+              <div class="col-md-4">
+                <h3>MaineWords</h3>
+                <p>
+                  This was a fun project. The challenge was to integrate both words into a logo that best identified the their writting style and the location where they operate.
+                </p>
+              </div>
+              <div class="col-md-8">
+                <img class="img-fluid" src="img/port-l-mainwords.jpg" alt="beubique" />
+              </div>
+          </div><!--/row-->
+          </div><!--/tabpane-->
+          <div id="motion" class="tab-pane fade">
+            <div class="row">
+              <div class="col-md-4">
+                <h3>Blue Chip Demo</h3>
+                <p>
+                  Blue Chip  wanted a video demo about their amazing technology.
+                </p>
+              </div>
+              <div class="col-md-8 videoCont">
+                <style></style><div class='embed-container'><iframe src='https://player.vimeo.com/video/209984847' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
+              </div>
+          </div><!--/row-->
+          <div class="row">
+            <div class="col-md-4">
+              <h3>Adap Video Demo</h3>
+              <p>
+                Video demo to tell the story of this early tech startup in Silicon Valley.
+              </p>
+            </div>
+            <div class="col-md-8 videoCont">
+              <div class='embed-container' style="padding-bottom: 39.25%;"><iframe src='https://player.vimeo.com/video/20866357' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
+            </div>
+        </div><!--/row-->
+          </div><!--/tab pane-->
+
+        </div><!--/tab-content-->
       </div>
+      </div>
+      </div><!--/padding-top-->
     </div>
   </section>
 
